BTC Day trader project finished

--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@ https://templatemo.com/tm-531-reflux
               <img class="verticalImage" alt="hiragana recognizer" src="assets/images/weatherApp.png">
               <button class="hoverText" onclick="location.href='./weatherApp.html';">Weather App</button>
             </div>
+            <div class="verticalImageWrapper">
+              <img class="verticalImage" alt="hiragana recognizer" src="assets/images/bitcoinDayTrader.png">
+              <button class="hoverText" onclick="location.href='./bitcoinDayTrader.html';">BTC Trader</button>
+            </div>
           </div>
 
         </div>
